IMPALA-11177: Remove DCHECK in useAsyncIoForStream

TestScannersFuzzing::test_fuzz_alltypes tests how impala handles
corruption in data files. IMPALA-6636 adds support for ORC async IO
where it put DCHECK within method useAsyncIoForStream to verify correct
orc::StreamKind. If this part of the ORC test file is corrupted, impalad
will crash in this DCHECK. We should remove this DCHECK and let ORC lib
deals with the corrupted orc::StreamKind itself.

Testing:
- Run and pass TestScannersFuzzing::test_fuzz_alltypes

Change-Id: I70b21badf39869091feff202e7a08a8460abf9db
Reviewed-on: http://gerrit.cloudera.org:8080/18311
Reviewed-by: Quanlong Huang <huangquanlong@gmail.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>